# matvec

./: .gitignore  CMakeLists.txt  README.md  benchmark.py
src/: application.cpp  application.h  main.cpp  matrix.h  matvec.cl  util.cpp  util.h
test/: test_main.cpp
